# looper

./: .gitignore  README.md  initial_plan.md
python/: NOTES.md  pyproject.toml
python/src/: looper.py
rust/: ARCHITECTURE.md  CRATES.md  Cargo.toml  looper_config.yaml
rust/scripts/: screenshot.sh
rust/src/: clock.rs  config.rs  main.rs  midi.rs  playback.rs
rust/src/ui/: mod.rs  sequence_table.rs
