[package]
name = "looper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "looper"
path = "src/main.rs"

[[bin]]
name = "midi_monitor"
path = "src/bin/midi_monitor.rs"

[[bin]]
name = "screenshot"
path = "src/bin/screenshot.rs"

[dependencies]
# MIDI hardware I/O (ports, real-time messages)
midir = "0.10"

# MIDI file parsing
midly = "0.5"

# GUI framework
iced = { version = "0.14", features = ["tokio"] }

# Async runtime (needed for iced)
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

# Error handling
anyhow = "1"

# Image saving (for screenshots)
image = "0.25"

# Timestamps
chrono = "0.4"

# Serialization (for config persistence)
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
